--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "d3": "^7.8.5",
+    "lucide-react": "^0.487.0",
     "next": "^14.0.0",
     "postcss": "^8.4.31",
     "react": "^18",
